--- a/blog-Worldwide-spread-of-COVID-19.html
+++ b/blog-Worldwide-spread-of-COVID-19.html
@@ -103,7 +103,7 @@
                 </div>
                 <ul class="blog-meta">
                     <li class="meta-item blog-lesson">
-                        <span class="meta-value"> Июль 26, 2021 </span>
+                        <span class="meta-value"> Июнь 14, 2021 </span>
                     </li>
                 </ul>
             </div>
