--- a/blog-Worldwide-spread-of-COVID-19.html
+++ b/blog-Worldwide-spread-of-COVID-19.html
@@ -55,8 +55,14 @@
                 <ul class="menu ml-auto mt-1">
                     <li class=""><a href="index.html">Главная</a></li>
                     <li class=""><a href="about.html"> Отзывы </a></li>
-                    <li class=""><a href="packages.html">Туры</a></li>
-		                <li class="active"><a href="blog.html">Блог</a></li>
+                    <li class="nav-item dropdown">
+                       <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Туры</a>
+                       <div class="dropdown-menu">
+                         <a class="dropdown-item" href="https://novipovorot.pp.ua/packages.html">Все Туры</a>
+                         <a class="dropdown-item" href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание Туров</a>
+                       </div>
+                     </li>
+		    <li class="active"><a href="blog.html">Блог</a></li>
                     <li class=""><a href="contact.html">Контакты</a></li>
                     <li class="booking"><a href="booking.html">Забронировать</a></li>
                 </ul>
